<resources>
    <string name="app_name">AutowareDrive</string>

    <!-- Strings related to login -->
    <string name="prompt_address">Adress</string>
    <string name="prompt_port">Port</string>
    <string name="prompt_vehicle_id">Vehicle ID</string>
    <string name="action_start">Start</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_address">This address is invalid</string>
    <string name="error_invalid_port">This port is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="accel_label">Accele</string>
    <string name="brake_label">Brake</string>
    <string name="accel_brake_label">Accele/Brake</string>
    <string name="steering_label">Steering</string>
    <string name="gear_label">Gear</string>
    <string name="gear_preview">P</string>

    <string name="vehicle_info_label">Vehicle Info</string>
    <string name="spped_label">Speed: 0 km/h</string>
    <string name="rpm_label">RPM: 0</string>
    <string name="mode_label">Mode: Auto</string>
    <string name="fps_label">FPS: - fps</string>
</resources>
